# aeroconform

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  README.md  lessons.md  pyproject.toml
configs/: data.yaml  graph.yaml  inference.yaml  model.yaml  train.yaml  training.yaml
dashboard/: index.html  package.json  vite.config.ts
dashboard/src/: App.tsx
dashboard/src/components/: AircraftDetail.tsx  AlertPanel.tsx  Map.tsx
doc/: FULL_SPEC.md
notebooks/: 01_data_exploration.ipynb  01_pretrain_aerogpt.ipynb  02_pretraining.ipynb  02_train_airgraph.ipynb  03_evaluation.ipynb  03_graph_training.ipynb  04_conformal_calibration.ipynb  05_evaluation.ipynb  06_live_demo.ipynb  _executed_01.ipynb  _executed_02.ipynb  _executed_03.ipynb  _run_01_data_exploration.ipynb  _run_02_pretraining.ipynb  _run_03_graph_training.ipynb  _run_04_conformal_calibration.ipynb  _run_05_evaluation.ipynb  _run_06_live_demo.ipynb  run_all.ipynb
scripts/: download_data.py  evaluate.py  serve.py  train.py
src/aeroconform/: __init__.py  config.py
src/aeroconform/data/: __init__.py  dataset.py  graph_builder.py  historical.py  opensky_client.py  preprocessing.py  synthetic_anomalies.py
src/aeroconform/evaluation/: __init__.py  benchmark.py  metrics.py  plots.py
src/aeroconform/inference/: __init__.py  live_monitor.py  mcp_server.py
src/aeroconform/models/: __init__.py  conformal.py  gaussian_head.py  graph_attention.py  pipeline.py  tokenizer.py  trajectory_model.py
src/aeroconform/training/: __init__.py  calibrate.py  pretrain.py  train_graph.py  utils.py
src/aeroconform/utils/: __init__.py  airspace.py  geo.py  logging.py
src/api/: main.py  models.py
src/data/: dataset.py  download.py  flight_segmentation.py  opensky_client.py  preprocessing.py  schemas.py  synthetic.py
src/evaluation/: benchmark.py  metrics.py
src/inference/: buffer_manager.py  pipeline.py
src/models/: aerogpt.py  airgraph.py  combined.py  conformal.py  embeddings.py  graph_builder.py  heads.py  losses.py  scoring.py
src/training/: masked_trainer.py  metrics.py  trainer.py
src/utils/: config.py  constants.py  geo.py  logging.py
tasks/: todo.md
tests/: __init__.py  conftest.py  test_aerogpt.py  test_buffer_manager.py  test_conformal.py  test_dataset.py  test_gaussian_head.py  test_geo.py  test_graph_attention.py  test_graph_builder.py  test_losses.py  test_pipeline.py  test_preprocessing.py  test_segmentation.py  test_smoke.py  test_synthetic.py  test_synthetic_anomalies.py  test_tokenizer.py  test_trajectory_model.py
