[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aeroconform"
version = "0.1.0"
description = "Conformalized trajectory foundation model for European airspace anomaly detection"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "AeroConform Team" }]
dependencies = [
    "torch>=2.2",
    "torch-geometric>=2.5",
    "numpy>=1.26",
    "polars>=1.0",
    "scipy>=1.12",
    "httpx>=0.27",
    "pyarrow>=15.0",
    "pydantic>=2.5",
    "pyyaml>=6.0",
    "pyopensky>=2.14",
    "structlog>=24.1",
    "matplotlib>=3.8",
    "tqdm>=4.66",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
    "pyright>=1.1",
]
serve = [
    "fastapi>=0.109",
    "uvicorn>=0.27",
    "websockets>=12.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
include = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
